--- a/static/src/stylesheets/module/experiments/_embed.scss
+++ b/static/src/stylesheets/module/experiments/_embed.scss
@@ -1,37 +1,22 @@
 @import 'svg';
-$news-main-1-dark: #003d70;
 
-
-
-.interactive-embed  {
-    height: 100%;
-    width: 100%;
+.contributions-embed  {
     border-top: 1px solid #4bc6df;
     background-color: #efefec;
+    padding: 0 $gs-gutter / 4 $gs-baseline $gs-gutter / 4;
+}
+
+.title {
+    @include fs-header(2);
+    margin: 0;
 }
 
 .contributions-paragraph  {
     font-size: 1em;
     line-height: 20px;
     font-family: $f-serif-headline;
-    padding-left: $gs-gutter / 4;
-    padding-right: $gs-gutter * (3 / 4);
-    margin-top: $gs-baseline * (2 / 3);
-    margin-bottom: $gs-baseline * (4 / 3);
+    margin-bottom: $gs-baseline;
 }
-
-
-.title {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-left: $gs-gutter / 4;
-    padding-top: $gs-baseline * (2 / 3);
-    font-family: $f-serif-headline;
-    font-weight: bold;
-    font-size: 1.17em;
-}
-
-
 
 .option-button {
     @include fs-textSans(4);
@@ -48,10 +33,12 @@ $news-main-1-dark: #003d70;
 
     width: calc((100% - 26px) /4);
     text-align: center;
-    margin-left: 3px;
+    margin-left: $gs-gutter / 4;
     margin-right: 0;
-    padding-top: $gs-baseline * (2 / 3);
-    padding-bottom: $gs-baseline * (2 / 3);;
+    //This combines with the default height of the button to result in a
+    //total button height of gs-gutter * 3
+    padding-top: .5em;
+    padding-bottom: .5em;
 
     &:hover {
         background-color: $comment-support-1;
@@ -65,18 +52,15 @@ $news-main-1-dark: #003d70;
 }
 
 .button-group {
-    margin-right: 5px;
-    margin-left: 2px;
+    margin-left: $gs-gutter / -4;
 }
 
 .flex-container {
     display: flex;
     flex-direction: column;
-    padding: 0 0 16px;
+    padding: 0;
     margin: 0;
     list-style: none;
-
-
 }
 
 .amount-field {
@@ -85,20 +69,18 @@ $news-main-1-dark: #003d70;
 
 }
 
-
 .contribute {
     width: 130px;
     background-color: $news-main-1;
     color: #ffffff;
     font-weight: bold;
     margin-top: $gs-baseline;
-    margin-left: $gs-gutter/ 4;
-    margin-right: $gs-gutter * (5 / 2);
     text-align: left;
     padding-left: $gs-gutter * (3 / 4);;
     padding-right: 0;
+    margin-left: 0;
     &:hover {
-        background-color: $news-main-1-dark;
+        background-color: darken($news-main-1, 5%);
     }
 
     &:after {
@@ -114,13 +96,13 @@ $news-main-1-dark: #003d70;
     }
 }
 
-
 @include mq($from: phablet) {
     .option-button--bottom {
         width: 70px;
     }
 
     .contribute--bottom {
+        margin-left: $gs-gutter / 4;
         margin-top: 0;
         width: 130px;
     }
@@ -132,10 +114,7 @@ $news-main-1-dark: #003d70;
     .contribute-embed--bottom {
         margin-top: 0;
     }
-
 }
-
-
 
 
 
