--- a/static/src/stylesheets/module/commercial/_creatives.scss
+++ b/static/src/stylesheets/module/commercial/_creatives.scss
@@ -151,7 +151,7 @@
         @include fs-textSans(1);
         position: absolute;
         z-index: 11;
-        bottom: -10px;
+        bottom: 0;
         left: 50%;
         border: 1px solid #ffffff;
         border-width: 1px 1px 0;
