--- a/static/src/stylesheets/_common.scss
+++ b/static/src/stylesheets/_common.scss
@@ -19,6 +19,7 @@
 @import 'module/commercial/_commercial';
 @import 'module/crosswords/_main';
 @import 'module/email/_main';
+@import 'module/signup/_main';
 @import 'module/_accessibility';
 @import 'module/experiments/_ab-low-friction-participation';
 @import 'module/experiments/_ab-join-discussion-after-poll';
