made contributions epic element

--- a/static/src/stylesheets/module/experiments/_embed.scss
+++ b/static/src/stylesheets/module/experiments/_embed.scss
@@ -6,6 +6,12 @@
     padding: 0 $gs-gutter / 4 $gs-baseline $gs-gutter / 4;
 }
 
+.contributions__epic {
+    border-top: 1px solid $multimedia-main-2;
+    background-color: #efefec;
+    padding: 0 $gs-gutter / 4 $gs-baseline $gs-gutter / 4;
+}
+
 .contributions__title {
     @include fs-header(2);
     margin: 0;
@@ -16,6 +22,10 @@
     line-height: 20px;
     font-family: $f-serif-headline;
     margin-bottom: $gs-baseline;
+}
+
+.contributions__paragraph-epic {
+    margin-top: $gs-baseline;
 }
 
 .contributions__option-button {
@@ -90,10 +100,20 @@
         background-repeat: no-repeat;
         width: 30px;
         height: 20px;
-        background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40"><path fill="white" stroke="white" d="M22.8 14.6L15.2 7l-.7.7 5.5 6.6H6v1.5h14l-5.5 6.6.7.7 7.6-7.6v-.9"/></svg>');
+        background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40"><path fill="black" stroke="black" d="M22.8 14.6L15.2 7l-.7.7 5.5 6.6H6v1.5h14l-5.5 6.6.7.7 7.6-7.6v-.9"/></svg>');
         background-size: 100%;
         float: right;
     }
+}
+
+.contributions__contribute-epic {
+    background-color: $multimedia-main-2;
+    color: $neutral-1;
+    width: 100px;
+    &:hover {
+        background-color: darken($multimedia-main-2, 5%);
+    }
+
 }
 
 @include mq($from: phablet) {
