--- a/static/src/javascripts/projects/common/views/contributions-epic.html
+++ b/static/src/javascripts/projects/common/views/contributions-epic.html
@@ -1,13 +1,15 @@
 <div class="contributions__epic">
     <div>
-        <h3 class="contributions__title">
-            Since you're here...</h3>
-        <p class="contributions__paragraph contributions__paragraph-epic">... we have a small favour to ask. More people are reading the Guardian than ever. But far fewer are paying for it. And advertising revenues are falling
+        <h2 class="contributions__title contributions__title--epic">
+            Since you're here ...</h2>
+        <p class="contributions__paragraph contributions__paragraph--epic">... we have a small favour to ask. More people are reading the Guardian than ever. But far fewer are paying for it. And advertising revenues are falling
         fast. So you can see why we need to ask for your help. The Guardian's independent, investigative journalism takes a lot of time, money and hard work to produce. But we do it because we
-        believe our perspective matters - because it might well be your perspective, too. If everyone who reads out reporting , who likes it, helps pay for it, our future would be much more secure. You can
+        believe our perspective matters - because it might well be your perspective, too. </p>
+
+        <p class="contributions__paragraph contributions__paragraph--epic">If everyone who reads our reporting, who likes it, helps pay for it, our future would be much more secure. You can
         give money to the Guardian in less than a minute.</p>
     </div>
-    <a class="contributions__option-button contributions__contribute contributions__contribute-epic" href="https://contribute.theguardian.com?<%=intCMP%>" target="_blank">
+    <a class="contributions__option-button contributions__contribute contributions__contribute--epic" href="https://contribute.theguardian.com?<%=intCMP%>" target="_blank">
         Contribute
     </a>
 </div>
