Drop leading zeroes in scss & make background more opaque.

--- a/static/src/javascripts/projects/common/views/commercial/survey/survey-adblock.html
+++ b/static/src/javascripts/projects/common/views/commercial/survey/survey-adblock.html
@@ -71,6 +71,9 @@
                     <% } %>
                 </div>
                 <% } %>
+                <p class="survey-text__info">
+                    Thanks for supporting us.
+                </p>
             </div>
         </div>
     </div>
