--- a/common/app/views/commercial/cards/itemCard.scala.html
+++ b/common/app/views/commercial/cards/itemCard.scala.html
@@ -13,28 +13,29 @@
   optImgRatio: Option[String] = None,
   useCardBranding: Boolean)
 
-<a href="@item.targetUrl"
-   class="@CssClassBuilder.linkFromStandardCard(item, optAdvertClassNames, optClassNames, useCardBranding)"
-   data-link-name="@omnitureId"
-    >
-    <h2 class="advert__title">
-        @for(icon <- item.icon){@inlineSvg(icon, "icon")}
-        @item.headline
-    </h2>
-    <div class="advert__image-container @for(imgRatio <- optImgRatio){u-responsive-ratio u-responsive-ratio--@imgRatio}">
-        @image(
-            Seq("advert__image"),
-            FaciaWidths.mediaFromItemClasses(ItemClasses(mobile = Standard, tablet = cardType, desktop = Some(cardType))),
-            maybeImageMedia = item.image,
-            maybeSrc = item.fallbackImageUrl
-        )
-    </div>
-    @for(description <- item.description) {
-        <div class="advert__standfirst">@Html(description)</div>
-    }
+<div class="@CssClassBuilder.linkFromStandardCard(item, optAdvertClassNames, optClassNames, useCardBranding)">
+    <a href="@item.targetUrl"
+       data-link-name="@omnitureId"
+       class="advert">
+        <h2 class="advert__title">
+            @for(icon <- item.icon){@inlineSvg(icon, "icon")}
+            @item.headline
+        </h2>
+        <div class="advert__image-container @for(imgRatio <- optImgRatio){u-responsive-ratio u-responsive-ratio--@imgRatio}">
+            @image(
+                Seq("advert__image"),
+                FaciaWidths.mediaFromItemClasses(ItemClasses(mobile = Standard, tablet = cardType, desktop = Some(cardType))),
+                maybeImageMedia = item.image,
+                maybeSrc = item.fallbackImageUrl
+            )
+        </div>
+        @for(description <- item.description) {
+            <div class="advert__standfirst">@Html(description)</div>
+        }
+    </a>
     @if(useCardBranding) {
         @for(branding <- item.branding) {
             @contentLogo(branding)
         }
     }
-</a>
+</div>
