--- a/static/src/stylesheets/module/commercial/_brandbadge.scss
+++ b/static/src/stylesheets/module/commercial/_brandbadge.scss
@@ -44,6 +44,11 @@
     max-width: 100%;
     max-height: $gs-baseline * 6;
 }
+.advert {
+    .brandbadge__logo {
+        max-height: $gs-baseline * 4;
+    }
+}
 .brandbadge__link,
 .brandbadge__help {
     float: left;
