--- a/static/src/javascripts/projects/common/views/contributions-epic.html
+++ b/static/src/javascripts/projects/common/views/contributions-epic.html
@@ -6,7 +6,7 @@
         fast. So you can see why we need to ask for your help. The Guardian's independent, investigative journalism takes a lot of time, money and hard work to produce. But we do it because we
         believe our perspective matters - because it might well be your perspective, too. </p>
 
-        <p class="contributions__paragraph contributions__paragraph--epic">If everyone who reads our reporting, who likes it, helps pay for it, our future would be much more secure. You can
+        <p class="contributions__paragraph contributions__paragraph--epic">If everyone who reads our reporting, who likes it, helps to pay for it, our future would be much more secure. You can
         give money to the Guardian in less than a minute.</p>
     </div>
     <a class="contributions__option-button contributions__contribute contributions__contribute--epic" href="https://contribute.theguardian.com?<%=intCMP%>" target="_blank">
