add INTCMP to href on contribute link

--- a/static/src/javascripts/projects/common/views/contributions-epic.html
+++ b/static/src/javascripts/projects/common/views/contributions-epic.html
@@ -9,7 +9,7 @@
         <p class="contributions__paragraph contributions__paragraph--epic">If everyone who reads our reporting, who likes it, helps to pay for it, our future would be much more secure. You can
         give money to the Guardian in less than a minute.</p>
     </div>
-    <a class="contributions__option-button contributions__contribute contributions__contribute--epic" href="https://contribute.theguardian.com?<%=intCMP%>" target="_blank">
+    <a class="contributions__option-button contributions__contribute contributions__contribute--epic" href="https://contribute.theguardian.com?INTCMP=<%=intCMP%>" target="_blank">
         Contribute
     </a>
 </div>
