--- a/common/app/views/fragments/commercial/contentLogo.scala.html
+++ b/common/app/views/fragments/commercial/contentLogo.scala.html
@@ -1,10 +1,9 @@
 @(branding: common.commercial.Branding)
 
-<div class="brandbadge brandbadge--onside ad-slot--force-display ad-slot--paid-for-badge ad-slot--paid-for-badge--front">
-    <div class="brandbadge__inner ad-slot--paid-for-badge__inner">
-        <h3 class="brandbadge__header">@branding.label</h3>
-        <a href="@branding.sponsorLink" class="brandbadge__link ad-slot--paid-for-badge__link">
-            <img class="brandbadge__logo" src="@branding.sponsorLogo">
-        </a>
-    </div>
+<div class="adverts__badge js-badge">
+    @branding.label
+    <a href="@branding.sponsorLink" class="adverts__badge__link">
+        <img class="brandbadge__logo" src="@branding.sponsorLogo">
+    </a>
 </div>
+
