Font, layout and instruction tweaks

--- a/static/src/javascripts/projects/common/views/commercial/survey/survey-adblock.html
+++ b/static/src/javascripts/projects/common/views/commercial/survey/survey-adblock.html
@@ -24,11 +24,11 @@
         </h3>
         <div class="survey-content">
             <div class="survey-text">
-                <p class="survey-text__info">
+                <p class="survey-text__strong">
                     <%=surveyText%>
                 </p>
                 <% if (surveyTextSecond) { %>
-                    <p class="survey-text__info">
+                    <p class="survey-text__strong">
                         <%=surveyTextSecond%>
                     </p>
                 <% } %>
@@ -71,9 +71,6 @@
                     <% } %>
                 </div>
                 <% } %>
-                <p class="survey-text__info">
-                    Thanks for supporting us.
-                </p>
             </div>
         </div>
     </div>
