--- a/static/src/javascripts/projects/common/views/contributions-epic.html
+++ b/static/src/javascripts/projects/common/views/contributions-epic.html
@@ -9,8 +9,25 @@
         <p class="contributions__paragraph contributions__paragraph--epic">If everyone who reads our reporting, who likes it, helps to pay for it, our future would be much more secure. You can
         give money to the Guardian in less than a minute.</p>
     </div>
-    <a class="contributions__option-button contributions__contribute contributions__contribute--epic" href="https://contribute.theguardian.com?INTCMP=<%=intCMP%>" target="_blank">
-        Contribute
-    </a>
+    <div class="contributions__amount-field contributions__amount-field--<%=position%>">
+        <div class="contributions__button-group--epic contributions__button-group--epic-<%=variant%>">
+            <div class="js-button-group contributions__button-group u-cf">
+                <button type="button" class="js-button contributions__option-button contributions__option-button--epic contributions__option-button--<%=position%>" data-amount="25">
+                    <span class="currency js-currency">£</span>25
+                </button><button type="button" class="js-button contributions__option-button contributions__option-button--epic contributions__option-button--<%=position%> active" data-amount="50">
+                <span class="currency js-currency">£</span>50
+            </button><button type="button" class="js-button contributions__option-button contributions__option-button--epic contributions__option-button--<%=position%>" data-amount="100">
+                <span class="currency js-currency">£</span>100
+            </button><button type="button" class="js-button contributions__option-button contributions__option-button--epic contributions__option-button--<%=position%>" data-amount="250">
+                <span class="currency js-currency">£</span>250</button>
+            </div>
+        </div>
+        <div >
+            <a class="js-submit-input contributions__option-button contributions__contribute contributions__contribute--epic contributions__contribute--<%=position%>" href="<%=linkUrl%>" target="_blank">
+                Contribute
+            </a>
+        </div>
+    </div>
+
 </div>
 
