Inline MPUs should have a minimum width

--- a/static/src/stylesheets/module/_adslot.scss
+++ b/static/src/stylesheets/module/_adslot.scss
@@ -170,6 +170,7 @@
 .ad-slot--liveblog-inline {
     width: $mpu-original-width;
     margin: $gs-baseline auto;
+    min-width: $mpu-original-width;
     min-height: $mpu-original-height + $mpu-ad-label-height;
     text-align: center;
 
