--- a/static/src/stylesheets/module/facia/_items.scss
+++ b/static/src/stylesheets/module/facia/_items.scss
@@ -30,7 +30,7 @@
     margin-bottom: $gs-baseline;
 
     @include mq(tablet) {
-        .has-flex & {
+        .has-flex &:not(.fc-slice__item--mpu-candidate) {
             display: flex;
         }
     }
