--- a/static/src/javascripts/projects/common/views/contributions-epic.html
+++ b/static/src/javascripts/projects/common/views/contributions-epic.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div >
-            <a class="js-submit-input contributions__option-button contributions__contribute contributions__contribute--epic contributions__contribute--<%=position%>" href="<%=linkUrl%>" target="_blank">
+            <a class="js-submit-input contributions__option-button contributions__contribute contributions__contribute--epic contributions__contribute--<%=position%> contributions__contribute--<%=variant%>" href="<%=linkUrl%>" target="_blank">
                 Contribute
             </a>
         </div>
