--- a/static/src/stylesheets/module/experiments/_embed.scss
+++ b/static/src/stylesheets/module/experiments/_embed.scss
@@ -113,8 +113,6 @@
 
 .contributions__contribute--epic {
     margin-top: 0;
-    background-color: $news-main-1;
-    color: #ffffff;
     width: 100px;
     &:hover {
         background-color: darken($news-main-1, 5%);
@@ -124,6 +122,22 @@
         background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40"><path fill="white" stroke="white" d="M22.8 14.6L15.2 7l-.7.7 5.5 6.6H6v1.5h14l-5.5 6.6.7.7 7.6-7.6v-.9"/></svg>');
     }
 }
+
+.contributions__contribute--no-buttons {
+    background-color: $multimedia-main-2;
+    color: $neutral-1;
+    &:after {
+        background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40"><path fill="$neutral-1" stroke="$neutral-1" d="M22.8 14.6L15.2 7l-.7.7 5.5 6.6H6v1.5h14l-5.5 6.6.7.7 7.6-7.6v-.9"/></svg>');
+    }
+
+    &:hover {
+        background-color: darken($multimedia-main-2, 5%);
+        color: $neutral-1;
+    }
+}
+
+
+
 
 .contributions__option-button--epic {
     &:hover {
@@ -164,6 +178,12 @@
     .contributions__contribute-embed--bottom {
         margin-top: 0;
     }
+
+    .contributions__contribute--no-buttons {
+        margin-left: 0;
+    }
+
+
 }
 
 
