rename top level section trait to something more generic

--- a/common/app/views/fragments/nav/newHeaderMenu.scala.html
+++ b/common/app/views/fragments/nav/newHeaderMenu.scala.html
@@ -2,7 +2,7 @@
 
 @import common.{ NewNavigation, LinkTo, Edition }
 
-@sectionList(topLevelSection: NewNavigation.TopLevelSection) = {
+@sectionList(topLevelSection: NewNavigation.EditionalisedNavigationSection) = {
     <li class="main-navigation__item navigation-border">
             <!-- TODO: Firefox -->
         <details class="js-close-nav-list main-navigation__primary-list" id="primary-list-@topLevelSection.name">
